# akt

./: CMakeLists.txt  main.cpp  main.h  resource.h  resource.rc
functions/: _global.h  stolenkey.cpp  stolenkey.h
